[gd_scene load_steps=25 format=3 uid="uid://kbsv76i35fis"]

[ext_resource type="Script" uid="uid://dtkbqkhf3vvr0" path="res://Assets/Menu/control.gd" id="1_dcvsf"]
[ext_resource type="Texture2D" uid="uid://cim000mf6oe87" path="res://Assets/Menu/321.png" id="2_kcxxd"]
[ext_resource type="Texture2D" uid="uid://ch1enjm3ax7lt" path="res://Assets/Text/1.png" id="2_oim03"]
[ext_resource type="Texture2D" uid="uid://djljch3yt7fvq" path="res://Assets/Text/2.png" id="3_dfnfp"]
[ext_resource type="Texture2D" uid="uid://bp2y8xxbn0gc0" path="res://Assets/Menu/470.png" id="3_palpy"]
[ext_resource type="Texture2D" uid="uid://c08aajj8a6rmy" path="res://Assets/Menu/215.png" id="4_32uqj"]
[ext_resource type="Texture2D" uid="uid://crfj18ns4alxs" path="res://Assets/Text/3.png" id="4_pj3pu"]
[ext_resource type="Texture2D" uid="uid://dc3rc0uok4ch1" path="res://Assets/Menu/362.png" id="5_jwgco"]
[ext_resource type="Texture2D" uid="uid://bhf4x7uifwnxo" path="res://Assets/Text/4.png" id="5_xmm6j"]
[ext_resource type="Texture2D" uid="uid://brhkngakwmr43" path="res://Assets/Menu/328.png" id="6_v520y"]
[ext_resource type="Texture2D" uid="uid://dun4yaf0uao5s" path="res://Assets/Text/5.png" id="6_xd7cn"]
[ext_resource type="Texture2D" uid="uid://dmdftxaaqmxy8" path="res://Assets/Menu/329.png" id="7_2mtc3"]
[ext_resource type="Texture2D" uid="uid://sff6ntskcctm" path="res://Assets/Text/6.png" id="7_vy1m2"]
[ext_resource type="Texture2D" uid="uid://clg6n5dmsr4sm" path="res://Assets/Text/7.png" id="8_2h5jg"]
[ext_resource type="Texture2D" uid="uid://dbs0rg1ae5tdx" path="res://Assets/Menu/330.png" id="8_w0cmo"]
[ext_resource type="Texture2D" uid="uid://ux337aomw000" path="res://Assets/Menu/331.png" id="9_oim03"]
[ext_resource type="Texture2D" uid="uid://ca8fw8aw6yrov" path="res://Assets/Menu/332.png" id="10_dfnfp"]
[ext_resource type="Texture2D" uid="uid://dxh4pymv16inq" path="res://Assets/Menu/334.png" id="11_pj3pu"]
[ext_resource type="Texture2D" uid="uid://dv3y0e3l38j3a" path="res://Assets/Menu/469.png" id="12_xmm6j"]
[ext_resource type="Texture2D" uid="uid://dq2ninttshg5t" path="res://Assets/Menu/303.png" id="13_kcxxd"]
[ext_resource type="Texture2D" uid="uid://b2j87scwigv1x" path="res://Assets/Menu/301.png" id="13_xd7cn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mshha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_v520y")
}, {
"duration": 1.0,
"texture": ExtResource("7_2mtc3")
}, {
"duration": 1.0,
"texture": ExtResource("8_w0cmo")
}, {
"duration": 1.0,
"texture": ExtResource("9_oim03")
}, {
"duration": 1.0,
"texture": ExtResource("10_dfnfp")
}, {
"duration": 1.0,
"texture": ExtResource("11_pj3pu")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ahb2d"]

[sub_resource type="ButtonGroup" id="ButtonGroup_831ug"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -5.0
offset_right = -5.0

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dcvsf")
img_num_1 = ExtResource("2_oim03")
img_num_2 = ExtResource("3_dfnfp")
img_num_3 = ExtResource("4_pj3pu")
img_num_4 = ExtResource("5_xmm6j")
img_num_5 = ExtResource("6_xd7cn")
img_num_6 = ExtResource("7_vy1m2")
img_num_7 = ExtResource("8_2h5jg")

[node name="AnimsPlaceHolder" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_kcxxd")

[node name="AnimatronicsChica" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 73.0
offset_right = 1097.0
offset_bottom = 768.0
texture = ExtResource("3_palpy")

[node name="AnimatronicsFreddy" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 73.0
offset_right = 1097.0
offset_bottom = 768.0
texture = ExtResource("4_32uqj")

[node name="AnimatronicsBunny" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 73.0
offset_right = 1097.0
offset_bottom = 768.0
texture = ExtResource("5_jwgco")

[node name="Animatronics" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 7.0
offset_top = -54.0
offset_right = 1160.0
offset_bottom = 745.0
texture = ExtResource("2_kcxxd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
modulate = Color(1, 1, 1, 0.6)
clip_children = 2
z_index = 1
position = Vector2(583, 379)
scale = Vector2(1.125, 1)
sprite_frames = SubResource("SpriteFrames_mshha")
frame_progress = 0.3834013

[node name="Glitch" type="AnimatedSprite2D" parent="Control"]
sprite_frames = SubResource("SpriteFrames_ahb2d")

[node name="Timer" type="Timer" parent="Control"]
wait_time = 3.0
one_shot = true
ignore_time_scale = true

[node name="Title" type="TextureRect" parent="Control"]
z_index = 2
layout_mode = 0
offset_left = 106.0
offset_top = 9.0
offset_right = 406.0
offset_bottom = 289.0
texture = ExtResource("12_xmm6j")

[node name="Timer2" type="Timer" parent="Control"]
wait_time = 3.1999999999999997
one_shot = true
ignore_time_scale = true

[node name="NewGame" type="TextureButton" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 105.0
offset_top = 380.0
offset_right = 327.0
offset_bottom = 420.0
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_831ug")
texture_normal = ExtResource("13_xd7cn")

[node name="Continue" type="TextureButton" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 103.0
offset_top = 433.0
offset_right = 325.0
offset_bottom = 473.0
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_831ug")
texture_normal = ExtResource("13_kcxxd")

[node name="NightLabel" type="TextureRect" parent="Control/Continue"]
layout_mode = 0
offset_left = 239.0
offset_top = 6.0
offset_right = 269.0
offset_bottom = 37.0
texture = ExtResource("2_oim03")

[connection signal="timeout" from="Control/Timer" to="Control" method="_on_timer_timeout"]
[connection signal="timeout" from="Control/Timer2" to="Control" method="_on_timer_2_timeout"]
[connection signal="pressed" from="Control/NewGame" to="Control" method="_on_new_game_pressed"]
[connection signal="pressed" from="Control/Continue" to="Control" method="_on_continue_pressed"]
